2008-02-20  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectPad/ProjectPackageNodeBuilder.cs: Handle the delete key in
	  TreeViewPad, so it will work event if the shortcut is not defined.

2008-02-19  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Handle better CleanPrecompiledHeaders, fixes bug
	  361045.

2008-02-14  Geoff Norton  <gnorton@novell.com>

	* Parser/TagDatabaseManager.cs: Disable the ctag implementation on OSX 
	as the ctags that apple ships is entirely incompatible with this parser.

2008-02-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Make sure directory exists before attempting to
	  delete it.

2008-02-13  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Use string.Join instead of custom method.

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Removed source editor
	  dependency.

2008-02-07  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/TagDatabaseManager.cs: Improve error handling. Should fix "Bug
	  359567 - MonoDevelop crashes when creating/opening C++ Console Project".

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Update MD version.

2008-01-22  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Removed useless code.

2008-01-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Parser/TagDatabaseManager.cs: Cache tags into a hash table and see if they
	  had been previously cached before looking for them again.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/StaticLibraryCProject.xpt.xml,
	  templates/StaticLibraryCppProject.xpt.xml,
	  templates/EmptyCProject.xpt.xml, templates/EmptyCSourceFile.xft.xml,
	  templates/EmptyCppProject.xpt.xml, templates/EmptyCppSourceFile.xft.xml,
	  templates/ConsoleCProject.xpt.xml, templates/ConsoleCppProject.xpt.xml,
	  templates/EmptyCHeaderFile.xft.xml,